--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "sass": "^1.32.8",
     "validator": "^13.1.17",
     "webpack-cli": "^3.3.12",
@@ -33,6 +34,7 @@
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@babel/runtime": "^7.13.10",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "@tailwindcss/jit": "^0.1.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
@@ -61,6 +63,7 @@
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "styled-components": "^5.2.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.26.2",
     "webpack-manifest-plugin": "^3.1.0",
     "webpack-nano": "^1.1.1"
