--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
   "dependencies": {
     "bootstrap": "^4.6.0",
     "clean-webpack-plugin": "^3.0.0",
+    "cloudinary-react": "^1.7.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-slick": "^0.28.1",
     "sass": "^1.32.8",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.1.17",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
@@ -59,6 +62,7 @@
     "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "prettier": "^1.16.4",
+    "react-image-gallery": "^1.0.9",
     "regenerator": "^0.14.7",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
