--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-slick": "^0.28.1",
     "sass": "^1.32.8",
     "slick-carousel": "^1.8.1",
+    "swiper": "^6.5.0",
     "validator": "^13.1.17",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
