--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
-    "react-slick": "^0.28.1",
+    "react-id-swiper": "^4.0.0",
     "sass": "^1.32.8",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.5.0",
