--- a/package.json
+++ b/package.json
@@ -58,12 +58,15 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^1.3.0",
     "file-loader": "^6.2.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.3.9",
     "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "prettier": "^1.16.4",
+    "rc-slider": "^9.7.2",
     "react-image-gallery": "^1.0.9",
+    "react-router-dom": "^6.0.0-beta.0",
     "regenerator": "^0.14.7",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
